# anymind

./: .gitignore  README.md
anymind-cli/: README.md  pyproject.toml  setup.py
anymind-cli/anymind/: auth.py  cli.py  config.py  deploy.py  utils.py
anymind-sdk/: MANIFEST.in  sdk.py
anymind-sdk/anymind/: __init__.py  client.py  exceptions.py  packaging.py
app/: env.example
app/anymind-sdk/: sdk.py
app/backend/: env.example  render.yaml
app/backend/app/core/: config.py
app/backend/app/services/: llm_service.py
app/src/components/: Navbar.tsx
app/src/contexts/: WalletContextProvider.tsx
app/src/contracts/: MantlememoContract.ts
app/src/hooks/: useMantleBalance.ts
app/src/pages/: EarningsDashboard.tsx  LandingPage.tsx  WalletBalance.tsx
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/models/: agent.py
backend/app/services/: api_key_service.py  runtime_service.py
client/src/: index.css
client/src/components/agents/: EmptyAgents.tsx
client/src/pages/: AgentDetail.tsx  ApiKeys.tsx
deploy/: .gitignore
deploy/client/: tailwind.config.ts
deploy/client/src/: App.tsx
deploy/client/src/pages/: Agents.tsx  Deployments.tsx  LogsUsage.tsx
deploy/docs/: backend.md  idea.md
deploy/server/: .env.example  requirements.txt
deploy/server/app/: __init__.py
deploy/server/app/core/: logging.py
docs/: sdk.md
server/: Dockerfile
server/app/: main.py
server/app/models/: execution.py  user.py
server/app/schemas/: auth.py
server/app/utils/: hashing.py  tarball.py
(+26 files in other folders)
